--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <meta property="og:image:height" content="630">
     
     <!-- adjust theme color -->
-    <style> body { --theme-color:blue ; } </style>
+    <style> body { --theme-color:red ; } </style>
     
 </head>
 <body>
